Fix slideshow js and shift it to index page, change css, send control-page.js to js folder

--- a/source/main.scss
+++ b/source/main.scss
@@ -213,7 +213,6 @@ body {
     }
 }
 
-
 /* Managing responsive navigation */
 
 header {
@@ -415,6 +414,7 @@ footer {
     padding-bottom: 1em;
     font-family: Verdana;
     font-size: 0.5em;
+    font-style:italic;
 }
 
 .column {
