--- a/styles/slideshow.css
+++ b/styles/slideshow.css
@@ -22,8 +22,7 @@
     font-size: 18px;
     transition: 0.6s ease;
     border-radius: 0 3px 3px 0;
-    user-select: none;
-    z-index: 0; }
+    user-select: none; }
   .slideshow-container .next {
     right: 0;
     border-radius: 3px 0 0 3px; }
@@ -38,6 +37,7 @@
     bottom: 8px;
     width: 100%;
     text-align: center;
+    line-height: 1;
     background-color: rgba(0, 0, 0, 0.5); }
   .slideshow-container .numbertext {
     color: #f2f2f2;
